# CodexAutomation

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
config/: settings.yaml
config/schemas/: financial_payload.schema.json
src/pipeline/: __init__.py  cli.py  config.py  orchestrator.py
src/pipeline/cloud/: __init__.py  analysis.py  claude_client.py  openai_reviewer.py
src/pipeline/extraction/: __init__.py  bouncer.py  redactor.py  schemas.py
src/pipeline/indexing/: __init__.py  chunker.py  embedder.py  vector_store.py
src/pipeline/ingestion/: __init__.py  excel_reader.py  ocr_gemma.py  pdf_native.py  router.py
src/pipeline/local_llm/: __init__.py  model_manager.py  ollama_client.py
src/pipeline/output/: __init__.py  audit_log.py  excel_writer.py
tests/: conftest.py  test_analysis.py  test_audit_log.py  test_batch_poll.py  test_bouncer.py  test_chunker.py  test_claude_client.py  test_cli.py  test_config.py  test_embedder.py  test_excel_reader.py  test_excel_writer.py  test_ingestion_router.py  test_integration_local.py  test_model_manager.py  test_ocr_cache.py  test_ollama_client.py  test_openai_reviewer.py  test_orchestrator.py  test_pdf_native.py  test_privacy_boundary.py  test_redactor.py  test_schemas.py  test_vector_store.py
tests/data/: make_fixtures.py
tests/fixtures/: anthropic_analysis_valid.json  ollama_bouncer_valid.json
